@@ -5,6 +5,11 @@ debhelper (10.9.1) UNRELEASED; urgency=medium
     messages during parsing when -O options were passed via
     DH_OPTIONS (among other).  Thanks to Adrian Bunk and
     Andrew Shadura for reporting the issue.  (Closes: #876689)
+  * Dh_Getopt.pm: Gracefully reduce the tool to a no-op when given
+    a -p<pkg> and <pkg> is disabled by a Build-Profile.
+  * debhelper.7: Document how package selections interact with
+    Build-Profiles.  Thanks to Helmut Grohne for the report.
+    (Closes: #872745)
 
  -- Niels Thykier <niels@thykier.net>  Thu, 21 Sep 2017 19:13:19 +0000
 
